project4/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: rbnrao/k8s-fast-api-getting-started:v0.0.2
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
spec:
  type: NodePort
  selector:
    app: fast-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
      nodePort: 30000
