project4/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: k8s.rajesh.com
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: fast-api-service
            port: 
              number: 8080
